...
        super.viewDidLoad()
        
        self.tableView.dataSource = self
        self.tableView.delegate = self
        self.tableView.separatorStyle = .none
        self.tableView.isAccessibilityElement = true
        self.tableView.accessibilityIdentifier = "automationAboutTableView"
        
        self.navigationItem.titleView = self.activityIndicatorView
        self.activityIndicatorView.hidesWhenStopped = true
        
        if let aboutInfo = presenter?.aboutInfo {
            configure(with: aboutInfo)
...
        cell.isAccessibilityElement = true
        cell.accessibilityIdentifier = "automationAboutCell_\(indexPath.row)"
        cell.textLabel?.isAccessibilityElement = true
        cell.detailTextLabel?.isAccessibilityElement = true
        
        cell.textLabel?.accessibilityIdentifier = "automationAboutCellTextLabel"
        cell.detailTextLabel?.accessibilityIdentifier = "automationAboutCelldetailTextLabel"

        cell.textLabel?.text = field.name
        cell.detailTextLabel?.text = aboutInfo[keyPath: field.keyPath]
        
        return cell
    }
...
