...
    override func viewDidLoad() {
        super.viewDidLoad()
        cityListViewModel.updateHandler = { [weak self] in
            self?.citiesTableView.reloadData()
        }
        citiesTableView.isAccessibilityElement = true
        citiesTableView.accessibilityIdentifier = "automationCitiesTableView"
        loadData()
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        self.navigationController?.navigationBar.isHidden = true
...
