...
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g6y-xE-59h">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                            </mapView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJN-PC-GF5">
                                <rect key="frame" x="299" y="621" width="60" height="30"/>
                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="automationAboutButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="1SV-uc-Uut"/>
                                    <constraint firstAttribute="width" constant="60" id="vvA-z1-SLH"/>
                                </constraints>
                                <state key="normal" title="About"/>
                                <connections>
...
